# lau-constellation

./: ACCESSIBILITY-AUDIT-REPORT.md  AI-BAND-DESIGN.md  API-IMPROVEMENT-PROPOSALS.md  ARCHITECTURE-DEEP-THINK.md  ASSEMBLY-FIRST-SYNTH-DESIGN.md  BETA-IMPROVEMENT-PROPOSALS.md  BETA-TEST-ROUND1-JAZZ-SAXOPHONIST.md  BUILD-MANIFEST.md  CHINESE-MUSIC-CONSTRAINT-THEORY.md  CLASSICAL-COMPOSER-REPORT.md  CLASSICAL-RETEST-REPORT.md  COMPOSER-MIDI-SOURCES.md  DAW-INTEGRATION-REPORT.md  DEEP-MATH-MUSICAL-STRUCTURE.md  DEPENDENCIES.md  DISTILLATION-LOOP.md  DOCS-IMPROVEMENT-PROPOSALS.md  ECOSYSTEM.md  EDUCATION-RESEARCH-REPORT.md  ELECTRONIC-PRODUCER-REPORT.md  FILM-COMPOSER-REPORT.md  HIPHOP-PRODUCER-REPORT.md  INTEGRATION-LAYER-DESIGN.md  JAZZ-PIANIST-REPORT.md  JULIA-FLUX-VISION.md  MEMORY.md  MUSICIAN-EXPERIENCE-REPORT.md  MUSICOLOGIST-RETEST-REPORT.md  NERVE-FIBER-ARCHITECTURE.md  README.md  RESEARCH-MATHEMATICS.md  RETEST-REPORT.md  SEED-MINI-IDEATION-R1.md  SEED-MINI-IDEATION-R10.md  SEED-MINI-IDEATION-R11.md  SEED-MINI-IDEATION-R2.md  SEED-MINI-IDEATION-R5-R6.md  SEED-MINI-IDEATION-R7.md  SOUND-PARAMETER-ATLAS.md  SPARE-CAPACITY-USER-RANKING.md  (+24 more)
constraint-mcp-server/: README.md  mcp-config.json  pyproject.toml
constraint-mcp-server/constraint_mcp_server/: __init__.py  __main__.py
constraint-solver-viz/: README.md  pyproject.toml
constraint-solver-viz/constraint_solver_viz/: __init__.py  funnel_viz.py  holonomy_viz.py  lattice_viz.py  metronome_viz.py  rigidity_viz.py
constraint-toolkit/: CHANGELOG.md  README.md  demo.py  pyproject.toml
constraint-toolkit/constraint_toolkit/: __init__.py  __main__.py  accompanist.py  analyzer.py  anti_music.py  audio_utils.py  benchmarks.py  classifier.py  cli.py  composer.py  conservation.py  datasets.py  dials.py  evolution.py  features.py  games.py  innovation.py  metrics.py  midi_utils.py  optimizer.py  oracle.py  recommender.py  style_transfer.py  synthesizer.py  timeline.py  validation.py  visualize.py
constraint-toolkit/docs/: api.md
constraint-toolkit/experiments/: exp10_anti_music.py  exp11_evolution.py  exp12_oracle_demo.py  exp13_timeline.py  exp14_games.py  exp15_production_classification.py  exp16_dial_space_analysis.py  exp17_synthetic_benchmark.py  exp18_corpus_statistics.py  exp19_validation.py  exp1_genre_classification.py  exp2_conservation_stress.py  exp3_dial_space_map.py  exp4_groove_optimization.py  exp5_cross_cultural.py  exp6_feature_importance.py  exp7_benchmarks.py  exp8_recommendation.py  exp9_innovation_cycle.py  results_exp5.json
constraint-toolkit/experiments/results/: exp19_validation.json
constraint-toolkit/results/: exp1_results.json  exp2_results.json  exp3_results.json  exp4_results.json
constraint-toolkit/tests/: test_accompanist.py  test_analyzer.py  test_anti_music.py  test_benchmarks.py  test_classifier.py  test_composer.py  test_conservation.py  test_datasets.py  test_dials.py  test_evolution.py  test_features.py  test_games.py  test_innovation.py  test_integration.py  test_metrics.py  test_optimizer.py  test_oracle.py  test_recommender.py  test_style_transfer.py  test_synthesizer.py  test_timeline.py  test_validation.py  test_visualize.py
constraint-viz/: README.md  pyproject.toml
constraint-viz/constraint_viz/: __init__.py  multi_scale.py
constraint-viz/docs/: DEVELOPER-GUIDE.md  USER-GUIDE.md
constraint-viz/examples/: demo_oscilloscope.py
constraint-viz/tests/: test_viz.py
constraint_instrument/: __init__.py  __main__.py  analyzer.py  chords.py  exercises.py  genre_brain.py  instrument.py  liner_notes.py  monitor.py  pyproject.toml  terrain_morph.py  test_tracks.py  tracks.py
constraint_instrument/constraint_instrument.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
constraint_instrument/examples/: demo_monitor.py  demo_terrain_morph.py
constraint_instrument/tests/: test_monitor_flow.py  test_terrain_morph.py
(+352 files in other folders)
