[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "style-extractor"
version = "0.1.0"
description = "Extract musical style DNA from MIDI files using constraint theory"
requires-python = ">=3.10"
dependencies = ["mido>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["style_extractor*"]
