[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "constraint-mcp-server"
version = "0.1.0"
description = "MCP server exposing the constraint-theory ecosystem to Copilot for Eclipse"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
constraint-mcp = "constraint_mcp_server:main"
