[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-solver-viz"
version = "0.1.0"
description = "Real-time visualisations of constraint solving"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "constraint-theory-core",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["constraint_solver_viz*"]
