[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "constraint-viz"
version = "0.1.0"
description = "Multi-scale constraint oscilloscope — visualize the same constraint structure at sample, note, phrase, and piece levels."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "mido>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["constraint_viz*"]
