[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-instrument"
version = "0.1.0"
description = "A constraint-music toolset inspired by jazz masters — seven modes, seventeen terrains."
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[project.optional-dependencies]
midi = ["mido"]
wav = ["numpy"]
dev = ["pytest", "numpy", "mido"]

[tool.setuptools.packages.find]
include = ["constraint_instrument*"]
